--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation 'com.google.firebase:firebase-database:19.3.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.google.android.material:material:<version>'
+    implementation 'com.android.support:design:30.0.0'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
