--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".LoginActivity"> </activity>
         <activity android:name=".MenuActivity"> </activity>
         <activity android:name=".RegistrationActivity"> </activity>
+        <activity android:name=".feature.onboarding.OnBoardingActivity" />
     </application>
     <uses-permission android:name="android.permission.INTERNET"/>
 
