added decks and cards

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.google.gms.google-services'
-
+apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.0"
@@ -45,16 +45,22 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:19.3.2'
     implementation 'com.google.firebase:firebase-storage:19.1.1'
     implementation 'com.google.firebase:firebase-database:19.3.1'
+    implementation 'com.google.firebase:firebase-database-ktx:19.3.1'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.android.support:design:30.0.0'
     implementation 'androidx.viewpager2:viewpager2:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta3'
     implementation 'com.tbuonomo.andrui:viewpagerdotsindicator:4.1.2'
+    implementation 'com.google.firebase:firebase-database:19.3.1'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.firebaseui:firebase-ui-storage:0.6.0'
+    kapt 'com.github.bumptech.glide:compiler:4.9.0'
 
 //For Google SignIn
     implementation 'com.google.android.gms:play-services-auth:18.1.0'
     //firebase
-    implementation 'com.google.firebase:firebase-core:17.4.4'
+    implementation 'com.google.firebase:firebase-core:17.5.0'
 
     //play service auth
     implementation 'com.google.android.gms:play-services-auth:18.1.0'
@@ -65,4 +71,4 @@ dependencies {
 
 
 }
-apply plugin: 'com.google.gms.google-services'
+
