--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.firebaseui:firebase-ui-storage:0.6.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx:21.5.0'
+
     kapt 'com.github.bumptech.glide:compiler:4.9.0'
 
 //For Google SignIn
