--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,7 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.firebaseui:firebase-ui-storage:0.6.0'
     implementation 'com.google.firebase:firebase-firestore-ktx:21.5.0'
-
+    implementation 'com.google.android.gms:play-services-wallet:18.0.0'
     kapt 'com.github.bumptech.glide:compiler:4.9.0'
 
 //For Google SignIn
