--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,14 +86,14 @@ dependencies {
 //For Google SignIn
     implementation 'com.google.android.gms:play-services-auth:18.1.0'
     //firebase
-    implementation 'com.google.firebase:firebase-core:17.5.0'
+    implementation 'com.google.firebase:firebase-core:17.5.1'
 
     //play service auth
     implementation 'com.google.android.gms:play-services-auth:18.1.0'
-
+    implementation 'com.airbnb.android:lottie:3.4.4'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
 
 }
