--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,11 @@ buildscript {
         google()
         jcenter()
         mavenCentral()
+
     }
     dependencies {
         def nav_version = "2.3.0"
-        classpath 'com.android.tools.build:gradle:4.0.2'
+        classpath 'com.android.tools.build:gradle:4.1.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.4'
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
@@ -23,6 +24,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+
     }
 }
 
